--- a/cloud/index.html
+++ b/cloud/index.html
@@ -72,9 +72,12 @@
             color: var(--t1);
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: center;
-            overflow: hidden;
+            justify-content: flex-start;
+            overflow-x: hidden;
+            overflow-y: auto;
+            padding: 40px 16px 60px;
             transition: background var(--speed), color var(--speed);
         }
 
